--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -25,7 +25,7 @@ const formatDate = (date: Date) =>
 >
   <Header />
   <main id="main-content" role="main">
-    <div class="panel panel--white relative overflow-hidden" style="background-image: url('/images/banner10.jpg'); background-size: cover; background-position: center bottom;">
+    <div class="panel panel--white relative overflow-hidden" style="background-image: url('/images/banner10.jpg'); background-size: cover; background-position: center 40%;">
       <!-- Semi-transparent overlay for readability -->
       <div class="absolute inset-0 bg-[#0b1a4a]/50 z-0"></div>
       <section class="relative z-10 max-w-4xl mx-auto px-4 py-20">
